<resources>
    <string name="app_name">Children competition</string>
    <string name="app_name_online">Children competition</string>
    <string name="app_name_offline">Children competition - offline mode</string>
    <string name="action_settings">Settings</string>
    <string name="participant_list_fragment_label">Participant List</string>
    <string name="participant_edit_fragment_label">Participant Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="participant_list_fragment">Participant list fragment</string>
    <string name="participant_edit_fragment">Participant edit fragment</string>
    <string name="participant_save_name">Name</string>
    <string name="participant_save_age">Age</string>
</resources>