<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_login">

    <fragment
        android:id="@+id/fragment_login"
        android:name="auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_fragment_login_to_fragment_participant_list"
            app:destination="@id/fragment_participant_list"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/fragment_participant_list"
        android:name="app.todo.participants.ParticipantListFragment"
        android:label="@string/participant_list_fragment_label"
        tools:layout="@layout/fragment_participant_list">

        <action
            android:id="@+id/action_ItemListFragment_to_ItemEditFragment"
            app:destination="@id/fragment_participant_edit"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    <fragment
        android:id="@+id/fragment_participant_edit"
        android:name="app.todo.participant.ParticipantEditFragment"
        android:label="@string/participant_edit_fragment_label"
        tools:layout="@layout/fragment_participant_edit">

        <action
            android:id="@+id/action_ItemEditFragment_to_ItemListFragment"
            app:destination="@id/fragment_participant_list"
            app:enterAnim="@anim/slide_out"
            app:exitAnim="@anim/slide_in"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
</navigation>